--- a/MyFirstProyect/webapp/i18n/i18n.properties
+++ b/MyFirstProyect/webapp/i18n/i18n.properties
@@ -1,3 +1,3 @@
-title=Ponte serio hasta cuando tu pana
+title=Ponte serio hasta cuando tu pana puede ser
 appTitle=MyFirstProyect
 appDescription=App Description
